Finished up the next lesson...

--- a/ES6 Course_Wes Bos/016_Tagged Templates Dictionary.html
+++ b/ES6 Course_Wes Bos/016_Tagged Templates Dictionary.html
@@ -8,8 +8,7 @@
     <style>
       abbr {
         text-decoration: none;
-        background-color: aqua;
-        cursor: help;
+        border-bottom: 1px dotted grey;
       }
     </style>
   </head>
