--- a/ES6 Course_Wes Bos/037_Chaining Promises.html
+++ b/ES6 Course_Wes Bos/037_Chaining Promises.html
@@ -39,13 +39,37 @@
             if (post) {
               resolve(post);
             } else {
-              reject(Error('There is no post with this id.'));
+              reject(Error('Post not found.'));
             }
           }, 1000);
         });
       }
 
-      getPostById(2).then(post => console.log(post));
+      function hydrateAuthor(post) {
+        // Create a new promise
+        return new Promise((resolve, reject) => {
+          // Find the author
+          const authorDetails = authors.find(author => author.name === post.author);
+          if (authorDetails) {
+            // "Hydrate" the post object with the author object
+            post.author = authorDetails;
+            resolve(post);
+          } else {
+            reject(Error('Cannot find the author.'));
+          }
+        });
+      }
+
+      getPostById(1)
+        .then(post => {
+          return hydrateAuthor(post);
+        })
+        .then(post => {
+          console.log(post);
+        })
+        .catch(err => {
+          console.error(err);
+        });
     </script>
   </body>
 </html>
