Exploring error handling in Async Await

--- a/ES6 Course_Wes Bos/071_Async Await Error_HigherOrderFn.html
+++ b/ES6 Course_Wes Bos/071_Async Await Error_HigherOrderFn.html
@@ -10,6 +10,7 @@
     <script>
       // We're going to use a Higher Order Function here for
       // error handling in Async Await.
+      // This is an alternative to using try/catch.
 
       // Higher Order Function
       // Definition: A function that takes in a function as an argument
@@ -48,7 +49,7 @@
       }
 
       const wrappedFn = catchErrors(beat);
-      wrappedFn('Puddles');
+      wrappedFn('Fido');
     </script>
   </body>
 </html>
