--- a/Personal Experiments/JS-OOP/index.html
+++ b/Personal Experiments/JS-OOP/index.html
@@ -10,6 +10,8 @@
     <!-- <script src="001_factories.js"></script> -->
     <!-- <script src="002_constructors.js"></script> -->
     <!-- <script src="003_constructorProperty.js"></script> -->
-    <script src="006_addingAndRemovingProperties.js"></script>
+    <!-- <script src="006_addingAndRemovingProperties.js"></script> -->
+    <!-- <script src="007_iteratingOverProperties.js"></script> -->
+    <script src="008_abstraction.js"></script>
   </body>
 </html>
