Getting to know getters & setters better.

--- a/Personal Experiments/JS-OOP/index.html
+++ b/Personal Experiments/JS-OOP/index.html
@@ -12,6 +12,9 @@
     <!-- <script src="003_constructorProperty.js"></script> -->
     <!-- <script src="006_addingAndRemovingProperties.js"></script> -->
     <!-- <script src="007_iteratingOverProperties.js"></script> -->
-    <script src="008_abstraction.js"></script>
+    <!-- <script src="008_abstraction.js"></script> -->
+    <!-- <script src="010_gettersAndSetters_01.js"></script> -->
+    <!-- <script src="010_gettersAndSetters_02.js"></script> -->
+    <script src="010_gettersAndSetters_03.js"></script>
   </body>
 </html>
