Creating a little object / API

--- a/Personal Experiments/JS-OOP/index.html
+++ b/Personal Experiments/JS-OOP/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="008_abstraction.js"></script> -->
     <!-- <script src="010_gettersAndSetters_01.js"></script> -->
     <!-- <script src="010_gettersAndSetters_02.js"></script> -->
-    <script src="010_gettersAndSetters_03.js"></script>
+    <!-- <script src="010_gettersAndSetters_03.js"></script> -->
+    <script src="011_designStopwatchObject_01.js"></script>
   </body>
 </html>
