--- a/Personal Experiments/OOP in JS/02 Prototypes/index.html
+++ b/Personal Experiments/OOP in JS/02 Prototypes/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="001_prototypicalInheritance.js"></script>
+    <!-- <script src="001_prototypicalInheritance.js"></script> -->
+    <script src="005_constructorPrototypes.js"></script>
   </body>
 </html>
