Learning about instance and prototype members.

--- a/Personal Experiments/OOP in JS/02 Prototypes/index.html
+++ b/Personal Experiments/OOP in JS/02 Prototypes/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- <script src="001_prototypicalInheritance.js"></script> -->
-    <script src="005_constructorPrototypes.js"></script>
+    <!-- <script src="005_constructorPrototypes.js"></script> -->
+    <script src="006_prototypeVsInstanceMembers.js"></script>
   </body>
 </html>
