Finished the section on prototypes

--- a/Personal Experiments/OOP in JS/02 Prototypes/index.html
+++ b/Personal Experiments/OOP in JS/02 Prototypes/index.html
@@ -9,6 +9,7 @@
   <body>
     <!-- <script src="001_prototypicalInheritance.js"></script> -->
     <!-- <script src="005_constructorPrototypes.js"></script> -->
-    <script src="006_prototypeVsInstanceMembers.js"></script>
+    <!-- <script src="006_prototypeVsInstanceMembers.js"></script> -->
+    <script src="007_iteratingInstanceAndPrototypeMembers.js"></script>
   </body>
 </html>
