Worked on page layout for Mattermost

--- a/Interviews/Mattermost/index.html
+++ b/Interviews/Mattermost/index.html
@@ -51,9 +51,9 @@
   </head>
   <body>
     <header>
-      <a href="./"
+      <!-- <a href="./"
         ><img src="img/logo--white.svg" class="logo__white" alt="Mattermost Logo" width="212px"
-      /></a>
+      /></a> -->
     </header>
     <div class="bg"></div>
   </body>
