work in progress

--- a/Experiments/searchWikipedia_03.html
+++ b/Experiments/searchWikipedia_03.html
@@ -15,9 +15,9 @@
     </style>
   </head>
   <body>
-    <!-- <p>Find notable events from a particular year:</p>
-    <input type="text" placeholder="Enter a year" />
-    <button type="submit">Search</button> -->
+    <input id="min" type="number" placeholder="Min Year" />
+    <input id="max" type="number" placeholder="Max Year" />
+    <button type="submit">generate questions</button>
     <section id="results"></section>
 
     <script src="https://unpkg.com/wtf_wikipedia">
@@ -26,87 +26,93 @@
     </script>
 
     <script>
-      const input = document.querySelector('input[type=text]');
+      const inputMin = document.getElementById('min');
+      const inputMax = document.getElementById('max');
       const submitBtn = document.querySelector('button[type=submit]');
       const resultsSection = document.getElementById('results');
 
-      function calcRandomYear() {
-        const yearMin = 1000;
-        const yearMax = 1960;
-        const numOfYearsInRange = yearMax - yearMin;
-        const randomYear = Math.floor(Math.random() * numOfYearsInRange);
-        return (randomYear + yearMin).toString();
-      }
+      submitBtn.addEventListener('click', () => generateQuestions());
 
-      const randomYear = calcRandomYear();
-      console.log(randomYear);
+      function generateQuestions() {
+        console.log(inputMin.value);
+        function calcRandomYear() {
+          const yearMin = inputMin.value;
+          const yearMax = inputMax.value;
+          const numOfYearsInRange = yearMax - yearMin;
+          const randomYear = Math.floor(Math.random() * numOfYearsInRange);
+          return (randomYear + yearMin).toString();
+        }
 
-      function displayResults(res) {
-        resultsSection.innerHTML = res;
-      }
+        const randomYear = calcRandomYear();
+        console.log(randomYear);
 
-      wtf.fetch(randomYear).then(doc => {
-        const collections = [];
+        function displayResults(res) {
+          resultsSection.innerHTML = res;
+        }
 
-        // Categorize Events
-        doc.sections().forEach((section, i) => {
-          if (section.depth === 0) {
-            // Create a new event category (events, births, deaths, etc.)
-            // that will contain events.
-            collections.push({ [section._title]: [] });
-          } else {
-            // Select the latest event object and add the current event to it.
-            const lastInArray = collections[collections.length - 1];
-            const sectionEventsArr = lastInArray[Object.keys(lastInArray)[0]];
+        wtf.fetch(randomYear).then(doc => {
+          const collections = [];
 
-            section.lists().forEach(items => {
-              items.data.forEach(item => {
-                const line = item.text();
-                // Remove cases where a date is on a line by itself.
-                if (line.length > 15) return sectionEventsArr.push(line);
+          // Categorize Events
+          doc.sections().forEach((section, i) => {
+            if (section.depth === 0) {
+              // Create a new event category (events, births, deaths, etc.)
+              // that will contain events.
+              collections.push({ [section._title]: [] });
+            } else {
+              // Select the latest event object and add the current event to it.
+              const lastInArray = collections[collections.length - 1];
+              const sectionEventsArr = lastInArray[Object.keys(lastInArray)[0]];
+
+              section.lists().forEach(items => {
+                items.data.forEach(item => {
+                  const line = item.text();
+                  // Remove cases where a date is on a line by itself.
+                  if (line.length > 15) return sectionEventsArr.push(line);
+                });
               });
-            });
-          }
+            }
+          });
+
+          // Remove empty categories
+          const filteredCollections = collections.filter(collection => {
+            return Object.values(collection)[0].length > 0;
+          });
+
+          const mainEvents = Object.values(filteredCollections[0])[0];
+
+          // Put it all together in a single array
+          let allEvents = [];
+          const collectAllEvents = filteredCollections.forEach(list => {
+            const eventType = Object.keys(list)[0];
+            const events = Object.values(list)[0];
+            allEvents.push(...events.map(event => `${eventType}: ${event}`));
+          });
+
+          const clues = [];
+          const totalClueCount = 5;
+          const minNumOfmainEvents = 2;
+
+          new Array(totalClueCount).fill(0).forEach((clue, i) => {
+            if (i <= minNumOfmainEvents - 1) {
+              const randomNumInMainEvents = Math.floor(Math.random() * mainEvents.length);
+              clues.push(mainEvents[randomNumInMainEvents]);
+            } else {
+              const randomNumInRange = Math.floor(Math.random() * allEvents.length);
+              clues.push(allEvents[randomNumInRange]);
+            }
+          });
+
+          const generateHtml = clues
+            .map(clue => {
+              // console.log(clue);
+              return `<li>${clue}</li>`;
+            })
+            .join('');
+
+          displayResults(generateHtml);
         });
-
-        // Remove empty categories
-        const filteredCollections = collections.filter(collection => {
-          return Object.values(collection)[0].length > 0;
-        });
-
-        const mainEvents = Object.values(filteredCollections[0])[0];
-
-        // Put it all together in a single array
-        let allEvents = [];
-        const collectAllEvents = filteredCollections.forEach(list => {
-          const eventType = Object.keys(list)[0];
-          const events = Object.values(list)[0];
-          allEvents.push(...events.map(event => `${eventType}: ${event}`));
-        });
-
-        const clues = [];
-        const totalClueCount = 5;
-        const minNumOfmainEvents = 2;
-
-        new Array(totalClueCount).fill(0).forEach((clue, i) => {
-          if (i <= minNumOfmainEvents - 1) {
-            const randomNumInMainEvents = Math.floor(Math.random() * mainEvents.length);
-            clues.push(mainEvents[randomNumInMainEvents]);
-          } else {
-            const randomNumInRange = Math.floor(Math.random() * allEvents.length);
-            clues.push(allEvents[randomNumInRange]);
-          }
-        });
-
-        const generateHtml = clues
-          .map(clue => {
-            // console.log(clue);
-            return `<li>${clue}</li>`;
-          })
-          .join('');
-
-        displayResults(generateHtml);
-      });
+      }
     </script>
   </body>
 </html>
