--- a/Experiments/Wikipedia Trivia Generator/index.html
+++ b/Experiments/Wikipedia Trivia Generator/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section id="results"></section>
+    <section id="results"><h1>Enter a date range to begin!</h1></section>
     <div class="form">
       <fieldset>
         <input id="min" type="number" placeholder="Min Year" />
