Added a reveal answer button

--- a/Experiments/Wikipedia Trivia Generator/index.html
+++ b/Experiments/Wikipedia Trivia Generator/index.html
@@ -15,6 +15,7 @@
         <input id="max" type="number" placeholder="Max Year" />
       </fieldset>
       <button type="submit">Generate Questions</button>
+      <div id="ctrRevealAnswer"></div>
     </div>
 
     <script src="https://unpkg.com/wtf_wikipedia">
