--- a/Experiments/Wikipedia Trivia Generator/index.html
+++ b/Experiments/Wikipedia Trivia Generator/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>The Ray White App</title>
+    <title>Mystery in History</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -18,10 +18,8 @@
       <div id="ctrRevealAnswer"></div>
     </div>
 
-    <script src="https://unpkg.com/wtf_wikipedia">
-      // Read the documentation here:
-      // https://github.com/spencermountain/wtf_wikipedia
-    </script>
+    <!-- Read the documentation here: https://github.com/spencermountain/wtf_wikipedia -->
+    <script src="https://unpkg.com/wtf_wikipedia"></script>
     <script src="script.js"></script>
   </body>
 </html>
