--- a/Experiments/Wikipedia Trivia Generator/index.html
+++ b/Experiments/Wikipedia Trivia Generator/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <p class="btnAbout">About</p>
     <section id="results"><h1>Enter a date range to begin!</h1></section>
     <div class="form">
       <fieldset>
