Access token has been pulled out of access-form-data.js

--- a/Experiments/Netlify Forms/form-submissions.html
+++ b/Experiments/Netlify Forms/form-submissions.html
@@ -21,7 +21,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- File below was included in the gitignore because it contains an access token -->
+    <!-- config is included in the gitignore because it contains an access token -->
+    <script src="config.js"></script>
     <script src="access-form-data.js"></script>
   </body>
 </html>
