Updating all the things!

--- a/Experiments/Netlify Forms/form-success.html
+++ b/Experiments/Netlify Forms/form-success.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <h1>Your message was sent!</h1>
-    <a href="https://testing-forms.netlify.com">Back to homepage</a>
+    <a href="./">Back to homepage</a>
   </body>
 </html>
