--- a/Experiments/Netlify Forms/index.html
+++ b/Experiments/Netlify Forms/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <style>
+      a {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+    </style>
   </head>
   <body>
     <form name="contact" method="POST" action="/form-success" netlify>
@@ -22,5 +29,6 @@
         <button type="submit">Send</button>
       </p>
     </form>
+    <a href="./form-submissions.html">All form submissions →</a>
   </body>
 </html>
