--- a/Experiments/Netlify Forms/form-submissions.html
+++ b/Experiments/Netlify Forms/form-submissions.html
@@ -6,21 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <style>
+      body {
+        background-color: azure;
+      }
+      #app {
+        margin: 80px auto;
+        max-width: 600px;
+      }
+      h1,
       h3,
       span {
+        font-family: Arial, Helvetica, sans-serif;
         margin: 0;
+        color: #20242b;
+      }
+      h1 {
+        margin-bottom: 40px;
+      }
+      h3 {
+        margin-bottom: 4px;
       }
       li {
-        margin: 20px;
+        margin-bottom: 20px;
         padding: 20px;
-        border: 8px solid rgba(63, 118, 191, 0.3);
+        background-color: white;
+        box-shadow: 0 6px 20px -2px hsla(0, 0%, 0%, 0.2);
         border-radius: 10px;
         list-style: none;
       }
     </style>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>Messages</h1>
+    </div>
     <!-- config is included in the gitignore because it contains an access token -->
     <script src="config.js"></script>
     <script src="access-form-data.js"></script>
